tests/NormalTests/paczka1/fuzzy1/24879664.err
Error in line 2: tSO5In S495 47,9
Error in line 10: S405 S405 79,5
Error in line 20: 0cfNdT A288 70,0
